Completo header e section "principal"

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
   <header class="site_header"></header>
   <!-- /.site_header -->
 
-  <main class="site_main">  </main>
+  <main class="site_main"> 
+
+    <section class="primary">
+      
+    </section>
+    <!-- /.primary -->
+
+  </main>
   <!-- /.site_main -->
 
   <footer class="site_footer"></footer>
