Completo il main

--- a/index.html
+++ b/index.html
@@ -19,6 +19,31 @@
     </section>
     <!-- /.primary -->
 
+    <section class="secondary clearfix">
+      <header class="secondary_header">
+
+      </header>
+      <!-- /.secondary_header -->
+
+      <aside class="sidebar left">
+
+      </aside>
+      <!-- /.sidebar -->
+
+      <div class="content">
+
+
+      </div>
+      <!-- /.content -->
+
+      <aside class="sidebar right">
+
+      </aside>
+      <!-- /.sidebar -->
+
+    </section>
+    <!-- /.secondary -->
+
   </main>
   <!-- /.site_main -->
 
