Debug dimensioni fisse

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body class="debug">
   <header class="site_header"></header>
   <!-- /.site_header -->
 
